@@ -167,8 +167,6 @@ class Environment(object):
             self.vfs_sandbox = sandbox
 
     def _set_defaults(self):
-        if self.branch is None:
-            self.branch = u'default'
         if self.update_method is None:
             self.update_method = 'rsync'
         if self.connect_method is None:
